// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`codegen.journey (local) given: [case1] a mechanic adopts svc-jobs, then evolves it then: the 3 expected files exist and the set matches snapshot: t1-generated 1`] = `
{
  "svcJobs.mechanisms.ts": "/**
 * 🦾 generated by \`sdk-aws-lambda gen\` — do not edit.
 * re-run the codegen to update.
 */

import { askLambdaEndpoint, type ContextAwsLambdaCaller } from 'sdk-aws-lambda';
import type { SvcJobsJob } from './svcJobs.resources';

export const svcJobs = {
  getJob: (
    event: { uuid: string },
    context: ContextAwsLambdaCaller,
  ): Promise<{ job: SvcJobsJob }> =>
    askLambdaEndpoint<{ uuid: string }, { job: SvcJobsJob }>(
      { which: { service: 'svc-jobs', function: 'getJob' }, event },
      context,
    ),
};
",
  "svcJobs.resources.ts": "/**
 * 🦾 generated by \`sdk-aws-lambda gen\` — do not edit.
 * re-run the codegen to update.
 */

import { DomainEntity, DomainLiteral } from 'domain-objects';

export interface SvcJobsAddress {
  city: string;
  postal: string;
}

export class SvcJobsAddress
  extends DomainLiteral<SvcJobsAddress>
  implements SvcJobsAddress {}

export interface SvcJobsJob {
  uuid: string;
  title: string;
  address: SvcJobsAddress;
}

export class SvcJobsJob extends DomainEntity<SvcJobsJob> implements SvcJobsJob {
  public static primary = ['uuid'] as const;
  public static unique = ['title'] as const;
  public static alias = { singular: 'job', plural: 'jobs' };
  public static nested = { address: SvcJobsAddress };
}
",
  "svcJobs.ts": "/**
 * 🦾 generated by \`sdk-aws-lambda gen\` — do not edit.
 * re-run the codegen to update.
 */

export { svcJobs } from './svcJobs.mechanisms';
export * from './svcJobs.resources';
",
}
`;

exports[`codegen.journey (local) given: [case1] a mechanic adopts svc-jobs, then evolves it when: [t3] upstream adds a Job field, re-gen then: the resources diff shows the new field: t3-drift-resources 1`] = `
"/**
 * 🦾 generated by \`sdk-aws-lambda gen\` — do not edit.
 * re-run the codegen to update.
 */

import { DomainEntity, DomainLiteral } from 'domain-objects';

export interface SvcJobsAddress {
  city: string;
  postal: string;
}

export class SvcJobsAddress
  extends DomainLiteral<SvcJobsAddress>
  implements SvcJobsAddress {}

export interface SvcJobsJob {
  uuid: string;
  title: string;
  address: SvcJobsAddress;
  note: string;
}

export class SvcJobsJob extends DomainEntity<SvcJobsJob> implements SvcJobsJob {
  public static primary = ['uuid'] as const;
  public static unique = ['title'] as const;
  public static alias = { singular: 'job', plural: 'jobs' };
  public static nested = { address: SvcJobsAddress };
}
"
`;

exports[`codegen.journey (local) given: [case1] a mechanic adopts svc-jobs, then evolves it when: [t4] a blocked scenario — gen with --env prod then: it throws blocked and prior [t3] output is intact (recovery): t4-blocked-message 1`] = `
"✋ LambdaIntrospectionBlockedError: introspection is only available in prep environment, got: prod

{
  "service": "svc-jobs",
  "access": "prod",
  "hint": "re-run with --env prep"
}"
`;

exports[`codegen.journey (local) given: [case1] a mechanic adopts svc-jobs, then evolves it when: [t5] a schema-less dobj is introduced upstream, re-gen then: it throws uncapturable, names the dobj, and no partial write: t5-uncapturable-message 1`] = `
"✋ LambdaDomainObjectNotCapturableError: domain-object 'Ghost' cannot be captured: its object schema declares no properties to reconstruct

{
  "name": "Ghost",
  "hint": "ensure the domain-object schema declares its properties (an empty object schema cannot be captured)"
}"
`;
